[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/bugged_game/game_about.gd" type="Script" id=1]
[ext_resource path="res://fonts/moria-citadel/MoriaCitadel.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/orange-kid/orange kid.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "cover"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("cover:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 200.0, 400.0, 600.0, 800.0 ]
}

[node name="game_about" type="Node"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0, 0.694118, 0.627451, 1 )

[node name="title" type="Label" parent="."]
margin_right = 800.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.929412, 0.239216, 0.239216, 1 )
text = "ABOUT"
align = 1
valign = 1
autowrap = true

[node name="explanation" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 120.0
margin_right = 784.0
margin_bottom = 700.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.929412, 0.239216, 0.239216, 1 )
text = "SAVE THE PRINCESS is a game made as an entry for Godot Relax Jam. The theme is DAMSEL.

Your goal is simple. All you have to do is.

1) Pick up the knife in the cave.
2) Defeat the enemies standing in front of the tower.
3) Rescue the princess.

Unfortunately, due to my overblown ambition, I left it unfinshed along with bad bugs."
scroll_active = false

[node name="return" type="Button" parent="."]
margin_left = 16.0
margin_top = 717.0
margin_right = 282.0
margin_bottom = 784.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.929412, 0.239216, 0.239216, 1 )
custom_colors/font_color_hover = Color( 0.14902, 0.45098, 0.407843, 1 )
text = "RETURN"
flat = true

[node name="control" type="Button" parent="."]
margin_left = 473.0
margin_top = 717.0
margin_right = 784.0
margin_bottom = 784.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.929412, 0.239216, 0.239216, 1 )
custom_colors/font_color_hover = Color( 0.137255, 0.45098, 0.407843, 1 )
text = "CONTROL"
flat = true

[node name="cover" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 800.0
color = Color( 0, 0.694118, 0.627451, 1 )

[node name="player" type="AnimationPlayer" parent="."]
anims/cover = SubResource( 5 )
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="control" to="." method="_on_control_pressed"]
[connection signal="animation_finished" from="player" to="." method="_on_player_animation_finished"]
